--- a/1_roster/3_positioning/positioning_start.html
+++ b/1_roster/3_positioning/positioning_start.html
@@ -51,67 +51,100 @@
     .avatar-image {
       border-radius: 50%;
     }
+
+    table {
+      width: 100%;
+    }
+
+    td {
+      vertical-align: top;
+    }
+
+
+
   </style>
 </head>
 <body>
-  <img src="booth_logo.jpg">
-  <h1>BUS36110 <small>Application Development Spring 2015</small></h1>
 
-  <div class="card">
-    <h2>Instructors</h2>
+  <table>
 
-    <ul>
-      <li>
-        <img class="avatar-image" src="https://graph.facebook.com/2913578/picture">
-        <div>Raghu Betina</div>
-      </li>
-      <li>
-        <img class="avatar-image" src="https://graph.facebook.com/2/picture">
-        <div>Ben Block</div>
-      </li>
-      <li>
-        <img class="avatar-image" src="https://graph.facebook.com/2/picture">
-        <div>Jerome Goodrich</div>
-      </li>
-    </ul>
-  </div>
+    <tr>
+      <td colspan="3">
+        <img src="booth_logo.jpg">
+        <h1>BUS36110 <small>Application Development Spring 2015</small></h1>
 
-  <div class="card">
-    <h2>Students</h2>
+      </td>
+    </tr>
 
-    <ul>
-      <li>Emilia Pollich</li>
-      <li>Judson Kunde</li>
-      <li>Kelsie Wolff</li>
-      <li>Howell Wilderman</li>
-      <li>Pete Bogisich II</li>
-      <li>Kayley Jakubowski</li>
-      <li>Avis Cole</li>
-      <li>Vance Huels</li>
-      <li>Lance Lowe</li>
-      <li>Maya Wyman</li>
-      <li>Will Herzog Jr.</li>
-      <li>Terrence Reynolds</li>
-      <li>Sincere Kunde</li>
-      <li>Terrell Pouros</li>
-      <li>Abdullah Smith</li>
-      <li>Adolfo Kihn</li>
-      <li>Leanne Powlowski</li>
-      <li>Julian Hintz</li>
-      <li>Francesco Reichert</li>
-      <li>Dixie Bradtke</li>
-    </ul>
-  </div>
+    <tr>
+      <td>
 
 
-  <div class="card">
-    <h2>Resources</h2>
+        <div class="card">
+          <h2>Instructors</h2>
 
-    <ul>
-      <li><a href="https://github.com/appdev-summer15" target="_blank">Course GitHub page</a></li>
-      <li><a href="http://ask.firstdraft.com/c/appdev-summer-2015" target="_blank">Course forum</a></li>
-      <li><a href="http://appdev-summer15.github.io/syllabus/" target="_blank">Course syllabus</a></li>
-    </ul>
-  </div>
+          <ul>
+            <li>
+              <img class="avatar-image" src="https://graph.facebook.com/2913578/picture">
+              <div>Raghu Betina</div>
+            </li>
+            <li>
+              <img class="avatar-image" src="https://graph.facebook.com/2/picture">
+              <div>Ben Block</div>
+            </li>
+            <li>
+              <img class="avatar-image" src="https://graph.facebook.com/2/picture">
+              <div>Jerome Goodrich</div>
+            </li>
+          </ul>
+        </div>
+      </td>
+
+
+      <td>
+        <div class="card">
+          <h2>Students</h2>
+
+          <ul>
+            <li>Emilia Pollich</li>
+            <li>Judson Kunde</li>
+            <li>Kelsie Wolff</li>
+            <li>Howell Wilderman</li>
+            <li>Pete Bogisich II</li>
+            <li>Kayley Jakubowski</li>
+            <li>Avis Cole</li>
+            <li>Vance Huels</li>
+            <li>Lance Lowe</li>
+            <li>Maya Wyman</li>
+            <li>Will Herzog Jr.</li>
+            <li>Terrence Reynolds</li>
+            <li>Sincere Kunde</li>
+            <li>Terrell Pouros</li>
+            <li>Abdullah Smith</li>
+            <li>Adolfo Kihn</li>
+            <li>Leanne Powlowski</li>
+            <li>Julian Hintz</li>
+            <li>Francesco Reichert</li>
+            <li>Dixie Bradtke</li>
+          </ul>
+        </div>
+      </td>
+
+      <td>
+        <div class="card">
+          <h2>Resources</h2>
+
+          <ul>
+            <li><a href="https://github.com/appdev-summer15" target="_blank">Course GitHub page</a></li>
+            <li><a href="http://ask.firstdraft.com/c/appdev-summer-2015" target="_blank">Course forum</a></li>
+            <li><a href="http://appdev-summer15.github.io/syllabus/" target="_blank">Course syllabus</a></li>
+          </ul>
+        </div>
+      </td>
+    </tr>
+
+
+  </table>
+
 </body>
 </html>
