--- a/5_canvas_styling/canvas_styling_start.html
+++ b/5_canvas_styling/canvas_styling_start.html
@@ -11,6 +11,9 @@
       vertical-align: top;
     }
   </style>
+
+ <link rel="stylesheet" href="my_canvas_styles.css">
+
 </head>
 <body>
   <table class="canvas">
